--- a/MongoMigrationWebApp/Pages/_Layout.cshtml
+++ b/MongoMigrationWebApp/Pages/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <script src="scripts/site.js"></script>
     <link href="MongoMigrationWebApp.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
