--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -65,7 +65,7 @@
             <th>Collection Name</th>
             <th>Download Status</th>
             <th>Upload Status</th>
-            <th>Time Since Update</th>
+            <th>Change Stream Lag</th>
         </tr>
     </thead>
     <tbody>
