--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -211,7 +211,7 @@
 
         return JobManager.migrationWorker.Config;
     }
-    private async Task OpenConfig()
+    private void OpenConfig()
     {
        _EditSettingsOpen = true;
     }
