Improved Chnage Stream Tracking

--- a/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
+++ b/MongoMigrationWebApp/Pages/MigrationJobViewer.razor
@@ -133,7 +133,7 @@
     <table class="table console-output">
         <thead>
             <tr>
-                <th style="width: 150px;">Date Time</th>
+                <th style="width: 150px;">Date Time (UTC)</th>
                 <th>Message</th>
             </tr>
         </thead>
