--- a/MongoMigrationWebApp/Components/MigrationSettings.razor
+++ b/MongoMigrationWebApp/Components/MigrationSettings.razor
@@ -22,6 +22,11 @@
                     <input type="number" id="chunk-size" class="form-control" @bind="Configuration.ChunkSizeInMB" />
                 </div>
 
+                <div class="mb-3">
+                    <label for="csbatchsize" class="form-label">Change Stream Batch Size:</label>
+                    <input type="number" id="csbatchsize" class="form-control" @bind="Configuration.ChangeStreamBatchSize" />
+                </div>
+
                 @if (!string.IsNullOrEmpty(ErrorMessage))
                 {
                     <div class="alert alert-danger mt-2">@ErrorMessage</div>
@@ -53,6 +58,12 @@
 
     private void HandleSubmit()
     {
+        if (Configuration.ChangeStreamBatchSize < 100 || Configuration.ChunkSizeInMB > 1000000)
+        {
+            ErrorMessage = "Batch Size should be between 100 and 1000,000.";
+            return;
+        }
+        
         if(Configuration.ChunkSizeInMB<2 || Configuration.ChunkSizeInMB>5120)
         {
             ErrorMessage = "Chunk Size (in MB) should be between 2 and 5120.";
