Collection wise ChangeStream StartDate

--- a/MongoMigrationWebApp/Pages/Index.razor
+++ b/MongoMigrationWebApp/Pages/Index.razor
@@ -36,7 +36,7 @@
                 <tr>
                     <th> &nbsp;&nbsp;&nbsp;&nbsp;</th>
                     <th>Name</th>
-                    <th>Started On</th>
+                    <th>Started On (UTC)</th>
                     <th>Endpoints</th>
                     <th>Is Online</th>
                     <th>Is Completed</th>
