--- a/MongoMigrationWebApp/Components/MigrationSettings.razor
+++ b/MongoMigrationWebApp/Components/MigrationSettings.razor
@@ -6,41 +6,35 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Edit Configuration Settings</h4>
-                <button type="button" class="btn-close" aria-label="Close" @onclick="@Cancel"></button> 
+                <button type="button" class="btn-close" aria-label="Close" @onclick="@Cancel"></button>
             </div>
-            <div class="modal-body">  
+            <div class="modal-body">
                 <div class="mb-3">
                     <label for="mongo-url" class="form-label">Mongo Tools Download URL:</label>
-                    <input type="text" id="mongo-url" class="form-control" @bind="Configuration.MongoToolsDownloadURL" />
+                    <input type="text" id="mongo-url" class="form-control" @bind="configuration.MongoToolsDownloadUrl" />
                 </div>
                 <div class="mb-3">
                     <label for="has-uuid" class="form-label">UUID used in _id :</label>
-                    <input type="checkbox" id="has-uuid" @bind="Configuration.HasUUID" />
+                    <input type="checkbox" id="has-uuid" @bind="configuration.HasUuid" />
                 </div>
                 <div class="mb-3">
                     <label for="chunk-size" class="form-label">Chunk Size (in MB):</label>
-                    <input type="number" id="chunk-size" class="form-control" @bind="Configuration.ChunkSizeInMB" />
+                    <input type="number" id="chunk-size" class="form-control" @bind="configuration.ChunkSizeInMb" />
                 </div>
 
                 <div class="mb-3">
                     <label for="csbatchsize" class="form-label">Change Stream Batch Size:</label>
-                    <input type="number" id="csbatchsize" class="form-control" @bind="Configuration.ChangeStreamBatchSize" />
+                    <input type="number" id="csbatchsize" class="form-control" @bind="configuration.ChangeStreamBatchSize" />
                 </div>
 
-                @if (!string.IsNullOrEmpty(ErrorMessage))
+                @if (!string.IsNullOrEmpty(errorMessage))
                 {
-                    <div class="alert alert-danger mt-2">@ErrorMessage</div>
+                    <div class="alert alert-danger mt-2">@errorMessage</div>
                 }
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary"
-                @onclick=@HandleSubmit>
-                    Ok
-                </button>
-                <button type="button" class="btn btn-secondary"
-                @onclick="@Cancel">
-                    Cancel
-                </button>
+                <button type="button" class="btn btn-primary" @onclick=@HandleSubmit>Ok</button>
+                <button type="button" class="btn btn-secondary" @onclick="@Cancel">Cancel</button>
             </div>
         </div>
     </div>
@@ -49,36 +43,36 @@
 @code
 {
     [Parameter]
-    public OnlineMongoMigrationProcessor.MigrationSettings? Configuration { get; set; } 
+    public OnlineMongoMigrationProcessor.MigrationSettings? configuration { get; set; }
 
     [Parameter]
     public EventCallback<OnlineMongoMigrationProcessor.MigrationSettings> OnConfigurationSaved { get; set; }
 
-    private string ErrorMessage = string.Empty;
+    private string errorMessage = string.Empty;
 
     private void HandleSubmit()
     {
-        if (Configuration.ChangeStreamBatchSize < 100 || Configuration.ChunkSizeInMB > 1000000)
+        if (configuration.ChangeStreamBatchSize < 100 || configuration.ChunkSizeInMb > 1000000)
         {
-            ErrorMessage = "Batch Size should be between 100 and 1000,000.";
-            return;
-        }
-        
-        if(Configuration.ChunkSizeInMB<2 || Configuration.ChunkSizeInMB>5120)
-        {
-            ErrorMessage = "Chunk Size (in MB) should be between 2 and 5120.";
+            errorMessage = "Batch Size should be between 100 and 1000,000.";
             return;
         }
 
-        if (!Regex.Match(Configuration.MongoToolsDownloadURL, @"^https://.*\.zip$").Success)
+        if (configuration.ChunkSizeInMb < 2 || configuration.ChunkSizeInMb > 5120)
         {
-            ErrorMessage = "URL must start with 'https://' and end with '.zip'.";
+            errorMessage = "Chunk Size (in MB) should be between 2 and 5120.";
+            return;
+        }
+
+        if (!Regex.Match(configuration.MongoToolsDownloadUrl, @"^https://.*\.zip$").Success)
+        {
+            errorMessage = "URL must start with 'https://' and end with '.zip'.";
             return;
         }
 
         if (OnConfigurationSaved.HasDelegate)
         {
-            OnConfigurationSaved.InvokeAsync(Configuration);
+            OnConfigurationSaved.InvokeAsync(configuration);
         }
     }
 
@@ -90,5 +84,4 @@
         }
     }
 }
-
 
